--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "Javascript_local_weather",
-  "version": "1.0.0",
-  "description": "[freecodecamp/show-the-local-weather](https://www.freecodecamp.org/challenges/show-the-local-weather)",
-  "main": "index.js",
-  "dependencies": {
-    "css-loader": "^3.2.0",
-    "jquery": "^3.4.1",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "unsplash-js": "^5.0.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+  "name": "Webpack4",
+  "author": "",
+  "main": "js/main.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production --watch"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.8.2"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.4.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.0",
+    "cssnano": "^4.1.8",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "whatwg-fetch": "2.0.4"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "webpack-dev": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mrfrappe/Javascript_local_weather.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mrfrappe/Javascript_local_weather/issues"
-  },
-  "homepage": "https://github.com/mrfrappe/Javascript_local_weather#readme"
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "requirejs": "^2.3.6"
+  }
 }
