--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "whatwg-fetch": "2.0.4"
+    "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.0",
     "requirejs": "^2.3.6"
   }
 }
